--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -9,9 +9,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1em;
   line-height: 1.5;
-  color: rgb(0, 0, 0);
+  color: rgb(241, 239, 239);
   margin: 0;
-  background-image: linear-gradient(-100deg, rgba(7, 7, 7, 0.9) 10%, rgba(61, 61, 61, 0.8) 90%);
 }
 
 a {
@@ -27,7 +26,7 @@ p {
   padding-top: 10px;
   padding-bottom: 10px;
   position: fixed;
-  background-color: #2d2d2e;
+  background-color: #2d2df2;
   box-shadow: 0 1px 3px rgba(235, 235, 235, 0.12), 0 1px 1px rgba(207, 207, 207, 0.14),
     0 2px 1px rgba(241, 241, 241, 0.2);
   z-index: 1;
