--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -139,7 +139,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: rgb(255, 255, 255);
+  color: rgb(30, 29, 29);
 }
 
 .info-item:not(:first-child) {
@@ -158,8 +158,8 @@ p {
   border-radius: 5px;
   background-color: #fbfbfb;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-  font: inherit;
-  color: rgb(0, 0, 0);
+  // font: inherit;
+  color: rgb(21, 21, 21);
   cursor: pointer;
 }
 
@@ -189,6 +189,7 @@ p {
 
 .btn-load-more:hover,
 .btn-to-top:hover {
-  background-color: #c3c3c3;
+  background-color: #3246f4;
+  color: #fdfdfd;
   transition: all 0.3s;
 }
